本地更改：修复方舟建设逻辑、夜晚行动移除建设方舟、玩家状态描述更新、天数联动、移除Google Fonts等